--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Ссылка на документ со стилями -->
+    <link rel="stylesheet" href="styles/styles.css">
+    
     <title>React App</title>
   </head>
   <body>
