--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <!-- Ссылка на документ со стилями -->
     <link rel="stylesheet" href="styles/styles.css">
     
-    <title>React App</title>
+    <title>Сайт выпускников кафедры МОСИТ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
